fix lightbox bug on ie6

--- a/public/stylesheets/cerabox.css
+++ b/public/stylesheets/cerabox.css
@@ -171,5 +171,5 @@
 /*IE6*/
 #cerabox-loading.ceraboxbox-ie6 {
 	position: absolute; margin-top: 0;
-	top: expression( (-20 + (document.documentElement.clientHeight ? document.documentElement.clientHeight/2 : document.body.clientHeight/2 ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop )) + 'px');
+	/*top: expression( (-20 + (document.documentElement.clientHeight ? document.documentElement.clientHeight/2 : document.body.clientHeight/2 ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop )) + 'px');*/
 }
